# FileMAC

./: .gitignore  .kateproject.notes  .pyproject.toml  MANIFEST.in  MANIFEST.ini  README.md  README.md~  demo.html  index.html  pyproject.toml  setup.py  setup.py~  tailwind.config.js
.github/workflows/: python-package.yml  python-publish.yml
audiobot/: __init__.py  __init__.py~  _utils.py  cli.py  effects.py  logger_init.py  logging_config.py  main.py~  modulator.py  processor.py  voice_ffects.py~  voicesChanger.py  voicesChanger.py~
audiobot/audioutils/: utils.py  visualizer.py
audiobot/config/: core.py
audiobot/core/: codec.py  effects.py  processor.py
audiobot/utils/: logging_utils.py  metadata_utils.py  visualizer.py
filemac/: .main.py~.kate-swp  AT2Word.py  AT2Word.py~  AT2Word.py~~~  ATWord.py  ATWord.py~  ATpdf.py~  Atxt2word.py  Atxt2word.py~  AudioExtractor.py  JoinAudios.py  JoinAudios.py~  OCRTextExtractor.py  OCRTextExtractor.py~  Simple_v_Analyzer.py  Simple_v_Analyzer.py~  Simple_v_Analyzer.py~~  SuAudioBot.py  SuAudioBot.py~  SuAudioBot~  VKITPro.py  VKITPro.py~  VRKit.py  VRKit.py~  __init__.py  __init__.py~  _profile.py~  colors.py  colors.py~  combinepdf.py  combinepdf.py~  converter.py  converter.py~  converter.py~~  dd.py  dd.py~  dd.py~~  dd2.py~  draft.py  draft.py~  (+33 more)
filemac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
filemac/Image2docx/: image_to_word.py
filemac/Imagepdfpy/: image_to_pdf.py
filemac/OCR/: Extractor.py  Extractor.py~
filemac/audiopy/: Extractor.py  Extractor.py~  Join.py  Join.py~  Join.py~~  audio.py  audio.py~  converter.py~  (+6 more)
filemac_utils/: dirbuster.py  filenames.py  formats.py  namerule.py
fweb/: README.md  db.sqlite3  manage.py  package.json  tailwind.config.js
res/: demo.html  init.css  styles.css
test/: dd.py  formats.py  img.dib  img.eps  img.icns  img.tiff  test.py  test.py~
tets/: dd.py~  test.py~
utils/: colors.py  decorators.py  dirbuster.py  formats.py  formats.py~~  overwrite.py~
voice/: VoiceType.py
(+107 files in other folders)
